# laba5_oop

./: README.md
laba5/: .gitignore  CMakeLists.txt  block_memory_resource.cpp  block_memory_resource.h  dynamic_array.h  main.cpp  test.cpp
